Prepared the instructions for installation and using the component